client/css/ui/buttons.css
.btn {
    display: inline-block;
    margin-bottom: 0;
    font-weight: normal;
    text-align: center;
    vertical-align: middle;
    cursor: pointer;
    border: 1px solid #CFD9DB;
    white-space: nowrap;
    padding: 6px 12px;
    font-size: 14px;
    line-height: 1.4286;
    border-radius: 4px;
    box-shadow: inset 0 1px 0 hsl(0deg 0% 100% / 15%), 0 1px 1px rgb(0 0 0 / 7.5%);
    color: #717171;
    background-color: #FFFFFF;
    outline: none !important;

    /* Prevent zoom on double tap */
    touch-action: manipulation;

    /* Prevent text selection */
    user-select: none;
}

.btn:hover {
    text-decoration: none;
    color: #333333;
}

.btn:active,
.btn.active {
    box-shadow: inset 0 3px 5px rgb(0 0 0 / 12.5%);
}

.btn[disabled],
.btn.disabled {
    box-shadow: none;
    opacity: 0.65;
    cursor: not-allowed;
}

.btn[disabled],
.btn[disabled]:hover,
.btn[disabled]:focus,
.btn[disabled]:active,
.btn[disabled].active {
    background-color: #E0E0E0;
    color: #717171;
}

/* Small button */
.btn.small {
    padding: 2px 8px;
}

/* Warning button */
.btn.warning {
    color: #FFFFFF;
    background-color: #F0AD4E;
    border-color: #E38D13;
}

.btn.warning.active,
.btn.warning:active,
.btn.warning:hover,
.btn.warning:focus {
    background-color: #EC971F;
    border-color: #D58512;
}

.btn.warning:focus {
    border-color: #985F0D;
}

.btn.warning[disabled],
.btn.warning[disabled]:hover,
.btn.warning[disabled]:focus,
.btn.warning[disabled]:active,
.btn.warning[disabled].active {
    color: #FFFFFF;
    background-color: #EB9316;
}

/* Danger button */
.btn.danger {
    color: #FFFFFF;
    background-color: #D9534F;
    border-color: #D43F3A;
}

.btn.danger.active,
.btn.danger:active,
.btn.danger:hover,
.btn.danger:focus {
    background-color: #C9302C;
    border-color: #AC2925;
}

.btn.danger:focus {
    border-color: #C12E2A;
}

.btn.danger[disabled],
.btn.danger[disabled]:hover,
.btn.danger[disabled]:focus,
.btn.danger[disabled]:active,
.btn.danger[disabled].active {
    color: #FFFFFF;
    background-color: #C12E2A;
}

/* Primary button */
.btn.primary {
    color: #FFFFFF;
    background-color: #337AB7;
    border-color: #2E6DA4;
}

.btn.primary.active,
.btn.primary:active,
.btn.primary:hover,
.btn.primary:focus {
    background-color: #286090;
    border-color: #204D74;
}

.btn.primary:focus {
    border-color: #122B40;
}

.btn.primary[disabled],
.btn.primary[disabled]:hover,
.btn.primary[disabled]:focus,
.btn.primary[disabled]:active,
.btn.primary[disabled].active {
    color: #FFFFFF;
    background-color: #265A88;
}

/* Success button */
.btn.success {
    color: #FFFFFF;
    background-color: #5CB85C;
    border-color: #3E8F3E;
}

.btn.success.active,
.btn.success:active,
.btn.success:hover,
.btn.success:focus {
    background-color: #419641;
    border-color: #3E8F3E;
}

.btn.success:focus {
    border-color: #255625;
}

.btn.success[disabled],
.btn.success[disabled]:hover,
.btn.success[disabled]:focus,
.btn.success[disabled]:active,
.btn.success[disabled].active {
    color: #FFFFFF;
    background-color: #419641;
}

/* Info button */
.btn.info {
    color: #FFFFFF;
    background-color: #5BC0DE;
    border-color: #28A4C9;
}

.btn.info.active,
.btn.info:active,
.btn.info:hover,
.btn.info:focus {
    background-color: #269ABC;
    border-color: #1B6D85;
}

.btn.info[disabled],
.btn.info[disabled]:hover,
.btn.info[disabled]:focus,
.btn.info[disabled]:active,
.btn.info[disabled].active {
    color: #FFFFFF;
    background-color: #2AABD2;
}

/* Font-icon buttons */
.btn > * {
    vertical-align: middle;
}

.btn .fa:not(:last-child) {
    margin-right: 0.85ex;
}

.btn *:not(.screen-reader-text) + .fa {
    margin-left: 0.85ex;
}

.btn.transparent {
    border: 0;
    padding: 0;
    background-color: transparent;
    box-shadow: none;
    font-size: inherit;
}

